fix(lives): Image too big on mobile
Life images were too big on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,8 +33,8 @@ canvas {
 }
 
 .life {
-  width: 64px;
-  height: 64px;
+  width: calc(36px + 2vw);
+  height: calc(36px + 2vw);
   image-rendering: pixelated;
   image-rendering: crisp-edges;
 }
